configuration: add configurable-by-tenant provisioning key
